_includes/css/main.css
/* ... */
nav {
    background-color: rgba(0,0,0,0.85);
    box-shadow: 0 3px 0 rgba(0,0,0,0.1);
    transition: background-color 0.5s ease;
}

nav a {
    color: rgba(255,255,255,0.8);
}

nav a:hover {
    color: rgba(255,255,255,1);
}

.nav>li>a:focus, .nav>li>a:hover {
    background-color: rgba(0,0,0,0);
}

#header-logo {
    position: relative;
}

.grid-bg {
    width: 100%;
    height: 100%;
    position: absolute;
    background-image: url('/img/grid.png');
    background-position: 50% 50%;
}

@media(min-width:768px) {
/*    header .container {
        padding-top: 200px;
        padding-bottom: 100px;
    }*/

    header .intro-text .name {
        font-size: 4.75rem;
    }

    header .intro-text .skills {
        font-size: 1.75rem;
    }
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 15px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-fixed-top .navbar-brand {
        font-size: 3rem;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink {
        padding: 10px 0;
    }

    .navbar-fixed-top.navbar-shrink .navbar-brand {
        font-size: 2.5rem;
    }
}

.navbar {
    text-transform: uppercase;
    font-family: 'allumi-std',"Helvetica Neue",Helvetica,Arial,sans-serif;
}

.navbar-header {
    position: relative;
}

.navbar-header a {
    position: relative;
    left: 0;
    padding-left: 42px;
    transition: all 0.5s linear;
}

.navbar-header a img {
    position: absolute;
    left: 0;
    top: 8px;
    transition: all 0.5s linear;
}

.navbar-header.navbar-shrink a img {
    top: 6px;
}

.navbar-shrink .navbar-header a {
    left: 28px;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-default,
.navbar-inverse {
    border: 0;
}

section {
    padding: 75px 0;
}

section h2 {
    margin: 0;
    font-size: 3rem;
    font-weight: 800;
}

.section-overview {
    text-align: left;
    padding: 20px 0;
    font-size: 2rem;
    font-weight: 100;
}



.bg-dark-grey {
    background-color: rgba(0, 0, 0, 0.95);
}

.bg-grey {
    background-color: rgba(0, 0, 0, 0.85);
}

.bg-brown {
    background-color: rgba(30, 10, 0, 0.9);
}

.bg-blue {
    background-color: rgba(0, 130, 255, 1);
}

.bg-pine {
    background-color: rgba(66, 164, 0, 1);
}

.bg-coral {
    background-color: rgba(255, 54, 89, 1);
}

.text-brown {
    color: rgba(30,10,0,0.85);
}

.text-blue {
    color: rgba(0, 130, 255, 0.9);
}

.text-pine {
    color: rgba(66, 164, 0, 0.9);
}

.text-coral {
    color: rgba(255, 54, 89, 0.9);
}

.section-overview p {
    margin: 0;
}

#services {
    background: url(http://subtlepatterns.com/patterns/subtle_dots.png);

}

.service, .service h3 {
    text-align: center;
    margin-top: 2rem;
}

.service h3 {
    font-weight: 500;
    margin: 0 auto;
    padding: 2rem 0;
    border-bottom: 1px solid rgba(0,0,0,0.15);
}

.service {
    padding: 0;
}

.service p {
    font-size: 1.5rem;
    margin: 0;
    padding: 1.5rem 1rem;
}

.service img {
    max-width: 176px;
    width: 100%;
}

#about {
    background-image: url('img/swash/waves.jpg');
    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
    background-position: 50%
    background-size: cover;
}

@media(max-width:767px) {
    section {
        padding: 75px 0;
    }

    section.first {
        padding-top: 75px;
    }
}

#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item .portfolio-link .caption {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: rgba(20,27,30,.9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#portfolio .portfolio-item .portfolio-link .caption:hover {
    opacity: 1;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content {
    position: absolute;
    top: 27.5%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    color: #fff;
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#portfolio .portfolio-item:hover .portfolio-link .caption .caption-content {
    top: 30%;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
    font-size: 5rem;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
    margin: 0;
}

#portfolio * {
    z-index: 2;
}

#portfolio p {
    font-size: 2.25rem;
}

#portfolio .client-name {
    text-transform: uppercase;
    margin-bottom: 0;
}

#portfolio p>small {
    font-size: 1.75rem;
    font-style: italic;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}

.btn-outline {
    margin-top: 15px;
    border: solid 1px rgba(255, 255, 255, 0.25);
    font-size: 2rem;
    color: #fff;
    background: 0 0;
    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.33);
    transition: all .3s ease-in-out;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border-color: rgba(255, 255, 255, 0);
    color: #fff;
    background: rgba(255, 255, 255, 0.15);
}

#contact {
    /*background: url(http://subtlepatterns.com/patterns/pw_maze_white.png);*/
    /*background: url(http://subtlepatterns.com/patterns/pw_maze_black.png);*/
    background: url(http://subtlepatterns.com/patterns/cream_dust.png);
    background: url(http://subtlepatterns.com/patterns/shattered.png);
    background: url(http://subtlepatterns.com/patterns/subtle_dots.png);
}
/* ... */

